add resource handling

--- a/spring-boot-spa-middleware/src/main/resources/application.properties
+++ b/spring-boot-spa-middleware/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 logging.level.io.katzorke=DEBUG
-spa.root.location=file:C:\\Users\\ckatz_000\\Documents\\GitHub\\spring-boot-spa\\frontend-ng\\dist\\frontend-ng\\
+spa.root.location=classpath:frontend-ng
+#spa.root.location=file:C:\\Users\\ckatz_000\\Documents\\GitHub\\spring-boot-spa\\frontend-ng\\dist\\frontend-ng\\
